--- a/lab3/notebook/03_object_tracking_2023.ipynb
+++ b/lab3/notebook/03_object_tracking_2023.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Student Name"
+    "### Student Name\n",
+    "\n",
+    "Mathieu Ruch\n",
+    "\n",
+    "An Bui Duc Khanh"
    ]
   },
   {
@@ -265,9 +269,9 @@
     "ret, frame = cap.read()\n",
     "cap.release()\n",
     "\n",
-    "img_gray_3chan = cv.cvtColor(frame, cv.COLOR_BGR2GRAY)\n",
+    "img_gray_3chan = cv.cvtColor(np.copy(frame), cv.COLOR_BGR2GRAY)\n",
     "img_gray_3chan = cv.cvtColor(img_gray_3chan, cv.COLOR_GRAY2BGR)\n",
-    "masked = cv.bitwise_and(img_gray_3chan, img_gray_3chan, dst = frame, mask=frame_lst[max_idx][1])\n",
+    "masked = cv.bitwise_and(img_gray_3chan, img_gray_3chan, dst = np.copy(frame), mask=frame_lst[max_idx][1])\n",
     "print(\"Frame with the red pixels REPLACED by their grayscale value:\")\n",
     "display_image(masked);\n",
     "#################################\n"
@@ -457,7 +461,7 @@
     "# 3. Display your images here\n",
     "# YOUR CODE HERE\n",
     "########################\n",
-    "# Solution\n",
+    "\n",
     "time_interval = 1 # seconds\n",
     "t_max         = 10\n",
     "# Get fps \n",
@@ -591,12 +595,12 @@
     "        # YOUR CODE HERE\n",
     "        \n",
     "        ### Random initialisation\n",
-    "        self.particles = np.stack([np.random.uniform(0, self.search_space[i],\n",
-    "                                    self.n_particles) for i in reversed(range(self.state_dims))]).T\n",
-    "        \n",
+    "        locations = np.stack([np.random.uniform(0, self.search_space[i],\n",
+    "                                    self.n_particles) for i in reversed(range(self.state_dims))])\n",
+    "        self.particles = locations.T\n",
     "        ### Compute weights\n",
     "        size = self.n_particles\n",
-    "        self.weights = np.ones(size)/self.n_particles\n",
+    "        self.weights = np.ones(size)/size\n",
     "        \n",
     "        return\n",
     "        \n",
@@ -621,7 +625,7 @@
     "        \n",
     "        # YOUR CODE HERE\n",
     "        \n",
-    "        noise = np.random.normal(0, self.sigma_perturbation, self.particles.shape)\n",
+    "        noise = np.random.normal(loc = 0, sclae = self.sigma_perturbation, size = self.particles.shape)\n",
     "        self.particles += noise\n",
     "\n",
     "\n",
@@ -729,9 +733,9 @@
     "\n",
     "- It is observable that particle the state changes a little bit as we see that the red dots are not perfectly over the green ones. This means that the position of the particles has changed for almost all the particles during the update and moved a few pixels away from the initial location.\n",
     "\n",
-    "- It seems that the perturbations fit what we should expect as each red dot is only a few pixels away from a green one and this holds in all the directions. This means that the size of the diplacement caused by the noise is restrained by the variance of the noise and `this displacement happens in all the directions` around the original point for the different particles. Furthermore, we see that for each green dot the probability of having the red dot in the neighbourhood decreases with the distance i.e. ?red dots are more likely to be close to green ones?. This is clearly the effect of a perturbation caused by a gaussian random noise (`perturbation in all the direction` + `the closer from the central point, the more likely it is`).\n",
+    "- It seems that the perturbations fit what we should expect as each red dot is only a few pixels away from a green one and this holds in all the directions. This means that the `size of the diplacement caused by the noise is restrained by its variance` and `this displacement happens in all the directions` around the original point for the different particles. Furthermore, we see that for each green dot the probability of having its red dot (updated location) in the neighbourhood decreases with the distance i.e. `the new locations are more likely to be close to the previous locations`. This is clearly the effect of a perturbation caused by a gaussian random noise (`perturbation in all the direction` + `the closer from the central point, the more likely it is`).\n",
     "\n",
-    "- We could check the implementation of the perturbation by running several updates, store the new locations and observe how the perturbations behave around one or several points. We could then see if we always get different results for the position and if it matches a gaussian noise around the fixed position. A little example is made in the next cells."
+    "- We could check the implementation of the perturbation by running several updates, store the updated locations (but keep the initial position as particle state) and observe how the perturbations behave around one or several points. We could then see if we always get different results for the updated position and if it matches a gaussian noise around the fixed position (the initial particle state). A little example is made in the next cells."
    ]
   },
   {
@@ -780,7 +784,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see on the two first pictures where two differents updates were made, the red particules displaced a little bit in a random manner around the green points. If we consider the displacement of 1 red particles around its central point (a green dot) and perform 50 updates instead of 2, we should observe a displacement similar to the random noise plotted in the previous cell (centered at (0, 0)). This should be the expected behaviour of the perturbation since we use the same function `np.random.normal` but just with a different variance. "
+    "As we can see on the two first pictures where two differents updates were made, the red particules displaced a little bit in a random manner around their initial position (green points). If we consider the displacement of 1 red particles around its central point (a green dot) and perform 50 updates instead of 2, we should observe a displacement similar to the random noise plotted in the previous cell (centered at (0, 0)). This should be the expected behaviour of the perturbation since we use the same function `np.random.normal` but just with a different variance. "
    ]
   },
   {
@@ -1076,7 +1080,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see on the plots corresponding to `Update 2` and `Update 3`, the weights remains rather the same i. e. the peaks always appear at the same particles and only their size changes a little bit. This is because of the gaussian perturbation that happens at each update. The particles only move a little bit around their previous locations but stay in the neighbourhood and therefore also almost keep the comparable weights (either peak or low value). "
+    "As we can see on the plots corresponding to `Update 2` and `Update 3`, the weights generally remains rather the same i. e. the peaks always appear at the same particles and only their sizes change a bit. This is because of the gaussian perturbation that happens at each update. The particles only move a little bit around their previous locations but stay in the neighbourhood and therefore genrally keep comparable weights (either peak or low value). "
    ]
   },
   {
@@ -1150,7 +1154,10 @@
     "ax[1].plot(weights2)\n",
     "ax[2].set_title('Weights with both Romney and Obamas Face')\n",
     "ax[2].plot(weights3)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "print(\"First weight plot 2 (Obama's face): \", weights2[0])\n",
+    "print(\"First weight plot 2 (Romney's face): \", weights3[0])"
    ]
   },
   {
@@ -1289,9 +1296,9 @@
    "source": [
     "**Your answer**\n",
     "\n",
-    "It can be observed that only after two updates, all the particles are converging to Romney's face. It is not as precise as the expected behviour, but they are all aggregated at the same place corresponding to the model.\n",
+    "It can be observed that only after two updates, all the particles are converging to Romney's face. It is not as precise as the expected behviour, but they are all aggregated around the same place corresponding to the model.\n",
     "\n",
-    "The particles converge there since at each update we calculate the weights at that time and see which particle is in a region that could match the model i.e. has a high weight (step 2). We then use those weights to resample the particle state (step 3). This means that particles with a higher weight will attract others that have smaller weight since the latter are less likely to match the model. Two updates are sufficient to see the benefits of this technique. Performing more update might slightly increase the precision, but not for sure since a random process is involved in the resampling."
+    "The particles converge there since at each update we calculate the weights at that time and see which particle is in a region that could match the model i.e. has a high weight (step 2). We then use those weights to resample the particle state (step 3). This means that particles with a higher weight will attract others that have smaller weights since the latter are less likely to match the model. Two updates are sufficient to see the benefits of this technique. Performing more update might slightly increase the precision, but not for sure since a random process is involved in the resampling."
    ]
   },
   {
@@ -1372,7 +1379,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thanks to the previous cell, we can understand the principle of the resampling and visualize its benefit. After 3 updates it is observable that weights are slightly better distributed because particles have converged to a region that better matches the model. In an ideal case, all the particles would be at the same place (at the center of the model) and have the same weights i. e. be uniformaly distributed. Here this is not the case because of the random process while resampling, the particles are not exactly at the same position. Therefore, particles that are really close to the center of the model get higher weights than others that are a bit further away (even if they are not far away from the center) get smaller weights or sometimes 0. "
+    "Thanks to the previous cell, we can understand the principle of the resampling and visualize its benefit. After 2 updates it is observable that weights are slightly better distributed because particles have converged to a region that better matches the model. In an ideal case, all the particles would be at the same place (at the center of the model) and have the same weights i. e. be uniformaly distributed. Here this is not the case because of the random process while resampling, the particles are not exactly at the same position. Therefore, particles that are really close to the center of the model get higher weights than others that are a bit further away (even if they are not far away from the center) get smaller weights or sometimes 0. \n",
+    "\n",
+    "**However**, it might also happen that the weight do not get better distributed, for instance if one is perfectly centered on the face and the others are a bit off center, then the particle perfectly centered will have a weight close to 1 or even 1 and the others ~0 even if the are close to the center of the face. "
    ]
   },
   {
@@ -1466,9 +1475,11 @@
    "source": [
     "**Your answer**\n",
     "\n",
-    "The tracking seems to be rather good. At the beginning it is less accurate as we did not perform enough updates to have a perfect result, but then we see that the particles have completely converged to the center of Romney's face and thus, the tracking result is really good. \n",
+    "In some cases the tracking seems to be rather good (cf pictures below). At the beginning (1st picture) it might be less accurate as we might not have performed enough updates to have a perfect result, but then we see that the particles have completely converged to the center of Romney's face (on picture 2 and 3 for ex.) and thus, the tracking result is really good in this case. But Romney does not move a lot, so the tracking is not hard to perform in this case. \n",
     "\n",
-    "For the last frames, even if Romney's face is directed towards Obama and does not face the camera, the tracking still performs well even if it is a little bit less accurate as it cannot perfectly match the model (Romney's face facing the camera)."
+    "For the last frames, even if Romney's face is directed towards Obama and does not face the camera, the tracking still performs well even if it is a little bit less accurate as it cannot perfectly match the model (Romney's face facing the camera). The tracking in this case is only possible if the particles have already converged to his face, because the similarity between the model and Romney's face when he turns his head will be lower than when facing the camera. We can conclude that having a fixed model is not optimal.\n",
+    "\n",
+    "Also, it might be different if we do the same experiment from scratch! Sometimes the particles converges to Obama's face which is wrong. If no particles were on Romney's face at the initialization but one was on Obama's face, the latter will attract the other particles around its place. This corresponds to the case 2 in our part `Visualize meaning of the weights`."
    ]
   },
   {
@@ -2278,10 +2289,6 @@
     "    # YOUR CODE HERE\n",
     "    print(name)\n",
     "    \n",
-    "    \n",
-    "    ###########################\n",
-    "    # Solution\n",
-    "    \n",
     "    tracker = create_face_tracker(name)\n",
     "    \n",
     "    # Initialize the tracker with the first frame and the given region\n",
@@ -2500,7 +2507,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2514,7 +2521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
