--- a/lab3/notebook/03_object_tracking_2023.ipynb
+++ b/lab3/notebook/03_object_tracking_2023.ipynb
@@ -625,7 +625,7 @@
     "        \n",
     "        # YOUR CODE HERE\n",
     "        \n",
-    "        noise = np.random.normal(loc = 0, sclae = self.sigma_perturbation, size = self.particles.shape)\n",
+    "        noise = np.random.normal(loc = 0, scale = self.sigma_perturbation, size = self.particles.shape)\n",
     "        self.particles += noise\n",
     "\n",
     "\n",
@@ -735,37 +735,14 @@
     "\n",
     "- It seems that the perturbations fit what we should expect as each red dot is only a few pixels away from a green one and this holds in all the directions. This means that the `size of the diplacement caused by the noise is restrained by its variance` and `this displacement happens in all the directions` around the original point for the different particles. Furthermore, we see that for each green dot the probability of having its red dot (updated location) in the neighbourhood decreases with the distance i.e. `the new locations are more likely to be close to the previous locations`. This is clearly the effect of a perturbation caused by a gaussian random noise (`perturbation in all the direction` + `the closer from the central point, the more likely it is`).\n",
     "\n",
-    "- We could check the implementation of the perturbation by running several updates, store the updated locations (but keep the initial position as particle state) and observe how the perturbations behave around one or several points. We could then see if we always get different results for the updated position and if it matches a gaussian noise around the fixed position (the initial particle state). A little example is made in the next cells."
+    "- We could check the implementation of the perturbation by running several updates, store the updated locations (but keep the initial position as particle state) and observe how the perturbations behave around one or several particles. We could then see if we always get different results for the updated position and if it matches a gaussian noise around the fixed position (the initial particle state). A little example of the expected behaviour is made in the next cells."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualization of the perturbation of the particle state"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pf = ParticleFilterStepOne(model=model,\n",
-    "                           search_space=frame.shape[:2],\n",
-    "                           n_particles=200,\n",
-    "                           state_dims=2)\n",
-    "\n",
-    "fig, ax = plt.subplots(2, 1, figsize=(8, 10))\n",
-    "\n",
-    "pf.update(frame)\n",
-    "canvas_perturbated = pf.draw_particles(np.copy(canvas), color=(0, 0, 255))\n",
-    "display_image(canvas_perturbated, axes=ax[0])\n",
-    "ax[0].set_title('Update 1')\n",
-    "pf.update(frame)\n",
-    "canvas_perturbated = pf.draw_particles(np.copy(canvas), color=(0, 0, 255))\n",
-    "display_image(canvas_perturbated, axes=ax[1])\n",
-    "ax[1].set_title('Update 2')"
+    "### Visualization of the expected behaviour of the perturbation of the particle state"
    ]
   },
   {
@@ -776,15 +753,17 @@
    "source": [
     "noise = np.random.normal(0, 1, (2, 50))\n",
     "\n",
-    "plt.title(\"Random noise variance with 1 - 50 upates for one particle\")\n",
-    "plt.plot((noise)[0], (noise)[1], '.');"
+    "plt.title(\"Random noise with variance 1 - 50 upates for one particle\")\n",
+    "plt.plot(0, 0, 'x', color='g', label='Initial state')\n",
+    "plt.plot((noise)[0], (noise)[1], '.', color='r', label='Update with perturb.');\n",
+    "plt.legend()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see on the two first pictures where two differents updates were made, the red particules displaced a little bit in a random manner around their initial position (green points). If we consider the displacement of 1 red particles around its central point (a green dot) and perform 50 updates instead of 2, we should observe a displacement similar to the random noise plotted in the previous cell (centered at (0, 0)). This should be the expected behaviour of the perturbation since we use the same function `np.random.normal` but just with a different variance. "
+    "If we were to consider the displacement of one particle after performing 50 updates with a fixed initial state, we should observe a displacement similar to the random noise plotted in the previous cell (centered at (0, 0)). This should be the expected behaviour of the perturbation since we use the same function `np.random.normal` but just with a different variance. "
    ]
   },
   {
@@ -1080,7 +1059,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see on the plots corresponding to `Update 2` and `Update 3`, the weights generally remains rather the same i. e. the peaks always appear at the same particles and only their sizes change a bit. This is because of the gaussian perturbation that happens at each update. The particles only move a little bit around their previous locations but stay in the neighbourhood and therefore genrally keep comparable weights (either peak or low value). "
+    "As we can see on the plots corresponding to `Update 2` and `Update 3`, the weights generally remains rather the same i. e. the peaks appear at the same particles and only their sizes change a bit. This is because of the gaussian perturbation that happens at each update. The particles only move a little bit around their previous locations but stay in the neighbourhood and therefore genrally keep comparable weights (either peak or low value). \n",
+    "\n",
+    "As we will see in the next cell (and as already explained), the weight is a measure of similarity between the model and the patch around the considered particle. Let us visualize this clearly."
    ]
   },
   {
@@ -1157,7 +1138,7 @@
     "plt.show()\n",
     "\n",
     "print(\"First weight plot 2 (Obama's face): \", weights2[0])\n",
-    "print(\"First weight plot 2 (Romney's face): \", weights3[0])"
+    "print(\"First weight plot 3 (Romney's face): \", weights3[0])"
    ]
   },
   {
@@ -1173,6 +1154,13 @@
     "- However, on the `second plot` we can see that the weight of the first particle (corresponding to Obama's face) is roughly 1 while the others are ~0. **The particle centered on Obama's face best matches the model** since the model is also a face and the particle on Romney's face is not considered. Therefore it gets a weight of ~1 and the other particles that lay on the background have their weights set to ~0.\n",
     "\n",
     "- Finally, on the `third plot` containing all the particles including the ones centered Obama's and Romney's face, we can observe that the first particle (corresponding to Romney's face) got a weight of 1 while the others are set to 0. Even the particle centered on Obama is ignored and its weight is ~0. **We can conclude that the implementation has recognized the model and therefore has given a weight of 1 to it.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Knowing this, what would be of interest to us now is to make particles with a smaller weight converging to the location of the ones with higher weights to find an object matching the model. This will be the resampling part."
    ]
   },
   {
@@ -1361,25 +1349,25 @@
     "initial_particles = pf.draw_particles(np.copy(frame))\n",
     "w_init = np.copy(pf.weights)\n",
     "\n",
-    "fig, ax = plt.subplots(3, 2, figsize=(14, 10))\n",
+    "fig, ax = plt.subplots(2, 2, figsize=(14, 10))\n",
     "ax[0][0].plot(w)\n",
     "ax[0][0].set_title('Initial weights')\n",
     "display_image(initial_particles, axes=ax[0][1])\n",
     "\n",
-    "for i in range(2):\n",
-    "    pf.update(frame)\n",
-    "    w = pf.weights\n",
-    "    ax[i+1][0].plot(w)\n",
-    "    ax[i+1][0].set_title('Weights after update '+str(i+1))\n",
-    "    resampled_particules = pf.draw_particles(np.copy(frame))\n",
-    "    display_image(resampled_particules, axes=ax[i+1][1])"
+    "pf.update(frame)\n",
+    "pf.update(frame)\n",
+    "w = pf.weights\n",
+    "ax[1][0].plot(w)\n",
+    "ax[1][0].set_title('Weights after 2 updates')\n",
+    "resampled_particules = pf.draw_particles(np.copy(frame))\n",
+    "display_image(resampled_particules, axes=ax[1][1])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thanks to the previous cell, we can understand the principle of the resampling and visualize its benefit. After 2 updates it is observable that weights are slightly better distributed because particles have converged to a region that better matches the model. In an ideal case, all the particles would be at the same place (at the center of the model) and have the same weights i. e. be uniformaly distributed. Here this is not the case because of the random process while resampling, the particles are not exactly at the same position. Therefore, particles that are really close to the center of the model get higher weights than others that are a bit further away (even if they are not far away from the center) get smaller weights or sometimes 0. \n",
+    "Thanks to the previous cell, we can understand the principle of the resampling and visualize its benefit. After 2 updates it is observable that weights are slightly better distributed because particles have converged to a region that better matches the model. In an ideal case, all the particles would be at the same place (at the center of the model) and have the same weights i. e. be uniformaly distributed. Here this is not the case because of the random process while resampling, the particles are not exactly at the same position. Therefore, particles that are really close to the center of the model get higher weights than others that are a bit further away (even if they are not far away from the center) and get smaller weights or sometimes 0. \n",
     "\n",
     "**However**, it might also happen that the weight do not get better distributed, for instance if one is perfectly centered on the face and the others are a bit off center, then the particle perfectly centered will have a weight close to 1 or even 1 and the others ~0 even if the are close to the center of the face. "
    ]
@@ -1477,9 +1465,9 @@
     "\n",
     "In some cases the tracking seems to be rather good (cf pictures below). At the beginning (1st picture) it might be less accurate as we might not have performed enough updates to have a perfect result, but then we see that the particles have completely converged to the center of Romney's face (on picture 2 and 3 for ex.) and thus, the tracking result is really good in this case. But Romney does not move a lot, so the tracking is not hard to perform in this case. \n",
     "\n",
-    "For the last frames, even if Romney's face is directed towards Obama and does not face the camera, the tracking still performs well even if it is a little bit less accurate as it cannot perfectly match the model (Romney's face facing the camera). The tracking in this case is only possible if the particles have already converged to his face, because the similarity between the model and Romney's face when he turns his head will be lower than when facing the camera. We can conclude that having a fixed model is not optimal.\n",
+    "For the last frames, even if Romney's face is directed towards Obama and does not face the camera, the tracking still performs well even if it is a little bit less accurate as it cannot perfectly match the model (Romney's face facing the camera). The tracking in this case is only possible if the particles have already converged to his face, because the similarity between the model and Romney's face when he turns his head will be lower than when facing the camera. Thus, we can conclude that having a fixed model is not optimal.\n",
     "\n",
-    "Also, it might be different if we do the same experiment from scratch! Sometimes the particles converges to Obama's face which is wrong. If no particles were on Romney's face at the initialization but one was on Obama's face, the latter will attract the other particles around its place. This corresponds to the case 2 in our part `Visualize meaning of the weights`."
+    "Also, the result might be different if we do the same experiment from scratch several times! The particles sometimes converges to Obama's face which is wrong. If no particles were on Romney's face at the initialization but one was on Obama's face, the latter will attract the other particles around its place. This corresponds to the case 2 in our part `Visualize meaning of the weights`."
    ]
   },
   {
